fix message alignment

--- a/index.scss
+++ b/index.scss
@@ -425,8 +425,6 @@ nav {
       .display {
         color: #fbd561;
         text-align: left;
-        height: calc(100%-30px);
-        top: 20px;
         bottom: 30px;
 
         div.sent {
